# GitGood

./: .gitignore  LICENSE  README.md
Languages/C++/: CMakeLists.txt
Languages/C++/include/CrackingTheCodingInterview/Graphs/: Graph.h
Languages/C++/include/CrackingTheCodingInterview/Trees/: Tree.h
Languages/C++/include/algorithms/Graphs/Itterative/: DFS.h
Languages/C++/include/datastructures/Graph/: Graphs.h  UGraph.h  graphMessages.h
Languages/C++/include/datastructures/Hash/: fileHelper.h  hashHelper.h
Languages/C++/include/datastructures/Tries/BaseClasses/: Tries.h
Languages/C++/include/datastructures/Tries/Implementations/: StringTries.h
Languages/C++/include/resources/: global.h  messages.h
Languages/C++/include/tools/: BigO.h  Utilities.h
Languages/C++/src/CrackingTheCodingInterview/Graphs/: Graph.cpp
Languages/C++/src/CrackingTheCodingInterview/Trees/: Tree.cpp
Languages/C++/src/algorithms/Graphs/Itterative/: DFS.cpp
Languages/C++/src/datastructures/Graph/: graphMessages.cpp  graphs.cpp
Languages/C++/src/datastructures/Hash/: fileHelper.c  hashHelper.c
Languages/C++/src/datastructures/Tries/BaseClasses/: Tries.cpp
Languages/C++/src/datastructures/Tries/Resources/: StringTries.cpp
Languages/C++/src/resources/: global.cpp  messages.cpp
Languages/C++/src/tools/: BigO.cpp  Utilities.cpp
Languages/Java/: pom.xml
Languages/Java/crackingthecodinginterview/: pom.xml
Languages/Java/crackingthecodinginterview/arraysandstrings/: pom.xml
Languages/Java/crackingthecodinginterview/bigo/: pom.xml
(+47 files in other folders)
